--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1",
     "save-dev": "0.0.1-security"
   },
   "scripts": {
@@ -36,6 +37,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^6.3.0"
   }
 }
